<resources>
    <string name="app_name">Sort-It</string>

    <!-- Strings for home pages -->
    <string name="Home_Desc1">Identify recyclable waste and learn how to dispose of it properly.</string>
    <string name="Home_Desc2">Capture an item to begin.</string>

    <string name="slide1_title">The Problem We Can\'t Ignore</string>
    <string name="slide1_desc">One of the leading producers of waste in Southeast Asia and a major source of plastic waste contamination in the ocean is the Philippines. Low recycling rates, problems with collection, and inconsistent plastic packaging segregation in many local government units (LGU) are some of the causes of this.</string>

    <string name="slide2_desc1">According to the 2020 World Wildlife Fund report "Extended Producer Responsibility Scheme Assessment for Plastic Packaging Waste in the Philippines," Filipinos consume about 20 kilos of plastic packaging annually, of which 15.43 kilograms end up as waste.</string>
    <string name="slide2_desc2">Low recycling rates, collection problems, and inconsistent plastic packaging segregation in many local government units (LGU) are some of the causes of this.</string>

    <string name="slide3_desc">This growing waste problem highlights the urgent need for responsible recycling. By properly segregating plastics, reducing unnecessary use, and choosing to recycle correctly, each individual can help lessen pollution and protect our seas. Responsible recycling starts with awareness—and change begins with you.</string>

    <!-- Strings for about pages -->
    <string name="about_intro"><b><font color="#467750">SORT-IT</font></b> is made to make recycling more intelligent and simple. In a matter of seconds, it classifies items as recyclable or non-recyclable using image recognition technology.\n\nWe hope to decrease waste, advance sustainability, and promote proper disposal practices by assisting users in correctly identifying recyclable objects.</string>
    <string name="about_goal">Due to confusion or lack of information, tons of recyclable products wind up in landfills each year.\n\nThis solution fills that void by providing consumers with a quick and easy option to:</string>
    <string name="about_developers">A dedicated team of students who believe in combining innovation and environmental responsibility to create real-world impact.</string>

    <!-- Strings for result pages -->
    <string name="recyclable_result">Your waste is recyclable!</string>
    <string name="nonrecyclable_result">Your waste is non-recyclable!</string>
    <string name="plastic_result">It\'s plastic!</string>
    <string name="paper_result">It\'s paper!</string>
    <string name="glass_result">It\'s glass!</string>
    <string name="metal_result">It\'s metal!</string>
    <string name="residual_result">It\'s residual!</string>

    <!-- Strings for the types in result pages -->
    <string name="glasstype_glassbotlle">Type: Glass Bottle</string>
    <string name="glasstype_flatglass">Type: Flat Bottle</string>
    <string name="glasstype_cullet">Type: Cullets</string>

    <!-- Feedback Strings -->
    <string name="rate_experience">Rate your Experience</string>
    <string name="improve_suggestion">Select what we can improve on:</string>
    <string name="feedback_hint">Tell us more about your experience...</string>
    <string name="send_feedback">Send Feedback</string>

    <!-- Feedback Tag Strings -->
    <string name="tag_accuracy">Accuracy of\nobject recognition</string>
    <string name="tag_sorting">Sorting suggestions</string>
    <string name="tag_design">Visual design</string>
    <string name="tag_reliability">Reliability of results</string>
    <string name="tag_response">Response time</string>
    <string name="tag_ease">Ease of use</string>
    <string name="feedback_success_msg">Thank you for sharing your \nthoughts. We appreciate \nyour feedback !</string>
    <string name="action_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>